--- a/notebooks/Distance computations.ipynb
+++ b/notebooks/Distance computations.ipynb
@@ -376,7 +376,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-rw-r--r--  1 yoavfreund  staff  249823 Jul  9 17:29 square.npy\r\n"
+      "-rw-r--r--  1 yoavfreund  staff  249823 Jul  9 17:29 square.npy\n"
      ]
     }
    ],
@@ -409,7 +409,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.7"
   },
   "toc": {
    "base_numbering": 1,
